--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     display: flex;
     flex-direction: column;
+    margin: 0;
 }
 
 header {
@@ -93,11 +94,10 @@ img {
 }
 
 .box {
-    background-color: #3882F6;
-    border-color:#3882F6;
     width: 150px;
     height: 150px;
-    border-radius: 10%;
+    border-radius: 14px;
+    border: 4px  solid rgb(87, 110, 227);
 }
 
 .box-para {
@@ -180,7 +180,13 @@ img {
 }
 
 footer {
+    
+    display: flex;
     background-color: #1F2937;
     text-align: center;
     color: white;
+    align-items: center;
+    font-size: 20px;
+    height: 130px;
+    justify-content: center;
 }
